1. Улучшения Collection API [#284485]